--- a/react2/package.json
+++ b/react2/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react2",
+  "name": "docs2txt",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,11 +7,18 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "web-tree-sitter": "^0.20.8",
+    "octokit": "^3.1.2",
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "framer-motion": "^10.16.16"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
@@ -23,6 +30,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.12.0",
-    "vite": "^6.0.1"
+    "vite": "^6.0.1",
+    "gh-pages": "^6.1.0"
   }
 }
