--- a/react2/package.json
+++ b/react2/package.json
@@ -7,18 +7,18 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "deploy": "gh-pages -d dist"
+    "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "web-tree-sitter": "^0.20.8",
-    "octokit": "^3.1.2",
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "framer-motion": "^10.16.16"
+    "framer-motion": "^10.16.16",
+    "octokit": "^3.1.2",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "tree-sitter-javascript": "^0.23.1",
+    "web-tree-sitter": "^0.20.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
@@ -29,8 +29,8 @@
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
+    "gh-pages": "^6.1.0",
     "globals": "^15.12.0",
-    "vite": "^6.0.1",
-    "gh-pages": "^6.1.0"
+    "vite": "^6.0.1"
   }
 }
